--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png.jpg" class="logo">
+                <img src="Images/logo.png.jpg" class="logo">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user.png.JPG">
+                    <img src="Images/user.png.JPG">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
@@ -101,7 +101,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/work-1.png.jpg">
+                    <img src="Images/work-1.png.jpg">
                     <div class="layer">
                         <h3>LED Wall</h3>
                         <p>Node/Iot/</p>
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png.jpg">
+                    <img src="Images/work-2.png.jpg">
                     <div class="layer">
                         <h3>Surf Report</h3>
                         <p>Mern Stack</p>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-3.png.jpg">
+                    <img src="Images/work-3.png.jpg">
                     <div class="layer">
                         <h3>Calculator</h3>
                         <p>React/Javascript/CSS</p>
